force-app/main/default/objects/apxio__Offered_Semester__c/fields/apxio__End_Date__c.field-meta.xml
<CustomField>
    <fullName>apxio__End_Date__c</fullName>
    <description>Date the semester ends</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>