force-app/main/default/objects/apxio__Offered_Semester__c/fields/apxio__Semester__c.field-meta.xml
<CustomField>
    <fullName>apxio__Semester__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The semester being offered</description>
    <label>Semester</label>
    <referenceTo>apxio__Semester__c</referenceTo>
    <relationshipLabel>Offered Semesters</relationshipLabel>
    <relationshipName>Offered_Semesters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>