force-app/main/default/objects/apxio__Offered_Semester__c/fields/apxio__Spaceship__c.field-meta.xml
<CustomField>
    <fullName>apxio__Spaceship__c</fullName>
    <description>The spaceship this semester is being offered at</description>
    <label>Spaceship</label>
    <referenceTo>apxio__Spaceship__c</referenceTo>
    <relationshipLabel>Offered Semesters</relationshipLabel>
    <relationshipName>Offered_Semesters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>