force-app/main/default/objects/apxio__Offered_Semester__c/fields/apxio__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>apxio__Start_Date__c</fullName>
    <description>Date the semester starts</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>